[project]
name = "scam-token-detector"
version = "0.1.0"
description = "Predictive scam-token detector: an autonomous on-chain investigator agent (Nebius Token Factory + Emergence CRAFT)"
requires-python = ">=3.12"
dependencies = [
    "mcp==1.26.0",
    "openai>=1.40",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
